--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 <body>
    
 <form action="/quotes" method="post">
-    <input type="text" placeholder="name" name="name">
+    <input type="text" placeholder="quoteId" name="quoteId">
+    <input type="text" placeholder="author" name="author">
+    <input type="text" placeholder="title" name="title">
     <input type="text" placeholder="quote" name="quote">
     <button type="submit">Submit</button>
 </form>
